# marketplace

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: deploy_main.yaml  push_any_except_main.yaml
deploy/: .env  docker-compose.yaml
market/: settings.py  urls.py
market/core/: admin.py  apps.py  serializers.py  urls.py  views.py
market/core/migrations/: 0001_initial.py
market/sellers/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
market/sellers/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  fixtures.py
tests/core/: user_create_test.py  user_login_test.py  user_profile_test.py
